# simple-llm-wiki

./: .env.example  .gitignore  .ingest_cache.json  .wikirc.yaml  .wikirc.yaml.example  CLAUDE.md  LICENSE  agent_deep_scan.py  fix_all_final.py  fix_quality.py  pyproject.toml
.claude/: settings.local.json
.obsidian/: graph.json  workspace.json
raw/: index.json
raw/articles/: 093f7d65_gstackClaude工程团队.md  12be559f_claude.md怎么写才能让Claude Code更高效claude.md怎么写才能让Claude Code更高效.md  149db3c1_Skills的本质是什么Skills的本质是什么.md  16fe1605_30 岁转行战略咨询如何从零开始系统学习战略管理30 岁转行战略咨询如何从零开始系统学习战略管理.md  1d3a90a2_真的有所谓的开悟吗真的有所谓的开悟吗.md  1ecc9a25_如何评价Karpathy提出的个人知识库的架构如何评价Karpathy提出的个人知识库的架构.md  25f38aec_一般技术大牛都在哪里写博客一般技术大牛都在哪里写博客.md  2d6f379d_非著名程序员 的想法 前端设计的 Skill 堪称前端美颜神器 这款前端设计的 front end design skill 确实非常好用效果很.md  3f3fc556_Claude code 产品经理Cat Wu亲述我是如何用AI彻底重构PM工作流的.md  4658b8c0_为什么很多初中女学霸到高中就默默无闻了为什么很多初中女学霸到高中就默默无闻了.md  46f2c12c_中国武术真的有内功存在吗中国武术真的有内功存在吗.md  4857790c_天涯论坛关闭后除了知乎大家都在逛什么天涯论坛关闭后除了知乎大家都在逛什么.md  48f717b0_Claude Code真的那么厉害吗Claude Code真的那么厉害吗.md  50a19a74_谷歌Stitch氛围设计干崩Figma 8.8股价十年经验败给巨头一次更新附实测.md  517a9161_GLM5Kimi 2.5Minimax M2.5千问豆包国产大模型选哪个GLM5Kimi 2.5Minimax M2.5千问豆包国产大模.md  51e11aeb_你们都用 OpenClawMoltbotClawdBot实现了什么有价值的功能你们都用 OpenClawMoltbotClawdBot实现了什么.md  55fe935f_Claude CodeCursorTRAE究竟谁最强Claude CodeCursorTRAE究竟谁最强.md  657ca307_Deepseek能为我做什么Deepseek能为我做什么.md  6b0f26af_claude.md怎么写才能让Claude Code更高效claude.md怎么写才能让Claude Code更高效.md  709aff76_朱卫军 的想法 这几天用selenium操作chrome浏览器尝试采集一些电商数据但被网站检测出来后面就没法访问了我怀疑是 - 知乎.md  (+19 more)
tests/: test_basic.py
wiki/: index.md  log.md  overview.md
(+1703 files in other folders)
